--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -4,37 +4,51 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // padding: 1rem;
     box-sizing: inherit;
-    // position: relative;
     background-color: lightgrey;
    }
 
   // Main content styling
   .content {
     width: 80%;
+    position: relative;
+    overflow: hidden;
   }
-
-  // @media screen and (max-width: 650px) {
-  //   .content {
-  //     flex-direction: column;
-  //     width: max-content;
-  //   }
-  // }
-
-  .container {
-    display:flex;
-    justify-content: space-between;
-    gap: 5%;
-    padding: 5%;
-  }
-
-  .left-align{
-    display: flex; 
+  
+  // Sidebar stylings
+  .sidebar {
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    gap: 2%;
-    width: 45%;
+    box-sizing: border-box;
+    width: 25%; 
+    height: 100%;
+    background-color: #333; 
+    position: absolute; 
+    left: 0;
+    z-index: 1; 
+    transition: width 0.3s ease;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+
+  .user-info-component {
+    padding:2%;
+    margin:2%;
+    margin-bottom: 50%;
+  }
+
+  .settings-button {
+    margin: auto;
+    align-self: flex-start;
+    margin-top: auto;
+    margin-bottom: 2%;
+  }
+  
+  .main-content {
+    display:flex;
+    margin-left: 25%;
+    justify-content: center;
+    padding: 2%;
   }
   
   .component {
@@ -42,8 +56,9 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
   
-  .user-info-component, .add-goal-component {
+  .add-goal-component {
     height: 100%;
     width: 100%;
     background-color: #f5f5f5;
@@ -85,9 +100,6 @@
     font-size: medium; 
     pointer-events: none; 
   }
-  
-  
-  
 
   .add-goal-component {
     display: flex;
@@ -109,8 +121,6 @@
     overflow-y: auto; 
     padding: 16px;
     width: 45%; 
-    max-width: 500px;
-    min-width: 300px;
     overflow: hidden; 
     transition: max-width 0.3s ease-in-out;
   }
