--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,7 +10,7 @@
 
   // Main content styling
   .content {
-    width: 80%;
+    width: 90%;
     position: relative;
     overflow: hidden;
   }
@@ -22,6 +22,7 @@
     box-sizing: border-box;
     width: 25%; 
     height: 100%;
+    padding: 2%;
     background-color: #333; 
     position: absolute; 
     left: 0;
@@ -30,13 +31,13 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
   }
-
+  
   .user-info-component {
     padding:2%;
     margin:2%;
     margin-bottom: 50%;
   }
-
+  
   .settings-button {
     margin: auto;
     align-self: flex-start;
@@ -57,6 +58,13 @@
     border-radius: 5px;
   }
 
+  .left-align{
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2%;
+    width: 45%;
+  }
   
   .add-goal-component {
     height: 100%;
@@ -65,17 +73,17 @@
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
   }
-
+  
   .user-info-component, .add-goal-component div {
-    margin-bottom: 12px; /* Adds space between each line */
+    margin-bottom: 12px;
   }
-
+  
   .input-wrapper {
     position: relative;
     display: inline-block;
     width: 50%; 
   }
-
+  
   // Log run input
   .input-wrapper {
     position: relative;
@@ -100,26 +108,27 @@
     font-size: medium; 
     pointer-events: none; 
   }
-
+  
   .add-goal-component {
     display: flex;
     flex-direction: column;
   }
-
+  
   .hover:hover {
     cursor: pointer;
     color: blue;
   }
-
+  
   .goals-tabs {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #f5f5f5; 
     border-radius: 8px; 
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    height: 100%;
+    margin-right: 2%;
+    overflow-y: auto; 
     min-height: 500px;
     max-height: 500px;
-    overflow-y: auto; 
-    padding: 16px;
     width: 45%; 
     overflow: hidden; 
     transition: max-width 0.3s ease-in-out;
@@ -128,7 +137,6 @@
   .add-goal-container {
     display: flex;
     flex-direction: column;
-    max-width: 35rem; 
   }
 
   .location-cards {
