--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,7 +8,7 @@
     background-color: lightgrey;
    }
 
-  // Main content styling
+  // Card that all content sits on
   .content {
     width: 90%;
     position: relative;
@@ -19,11 +19,12 @@
   .sidebar {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     box-sizing: border-box;
     width: 25%; 
     height: 100%;
     padding: 2%;
-    background-color: #333; 
+    background-color: #DA9F93; 
     position: absolute; 
     left: 0;
     z-index: 1; 
@@ -34,17 +35,16 @@
   
   .user-info-component {
     padding:2%;
-    margin:2%;
-    margin-bottom: 50%;
+    margin-bottom: 25%;
   }
   
   .settings-button {
-    margin: auto;
     align-self: flex-start;
     margin-top: auto;
     margin-bottom: 2%;
   }
-  
+
+  // Main content box stylings  
   .main-content {
     display:flex;
     margin-left: 25%;
@@ -53,16 +53,15 @@
   }
   
   .component {
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
+    background-color: #EBD4CB;
+    border: 1px solid #2C0703;
     border-radius: 5px;
   }
 
-  .left-align{
+  .right-content-align {
     display: flex; 
     flex-direction: column;
     justify-content: space-between;
-    gap: 2%;
     width: 45%;
   }
   
@@ -72,10 +71,9 @@
     background-color: #f5f5f5;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
-  }
-  
-  .user-info-component, .add-goal-component div {
-    margin-bottom: 12px;
+    min-height: 500px;
+    max-height: 500px;
+    overflow: hidden;
   }
   
   .input-wrapper {
@@ -120,10 +118,8 @@
   }
   
   .goals-tabs {
-    border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #f5f5f5; 
     border-radius: 8px; 
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     height: 100%;
     margin-right: 2%;
     overflow-y: auto; 
@@ -140,7 +136,6 @@
   }
 
   .location-cards {
-    max-height: 10rem;
     overflow-y: auto;
     width: 100%;
   }
@@ -152,6 +147,10 @@
   app-address-card {
     display: block;
     margin: 5px;
+  }
+
+    app-address-card:hover {
+    background-color: #e0e0e0; 
   }
 
   .align-right {
@@ -288,19 +287,6 @@
   .scrollable-card:hover {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
     transform: translateY(-4px);    
-  }
-  
-  .app-address-card {
-    margin-top: 10px;
-    border: 1px solid #ddd;
-    font-size: small;
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-
-  .app-address-card:hover {
-    background-color: #e0e0e0; 
   }
 
   .highlight {
