--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -21,10 +21,11 @@
     flex-direction: column;
     justify-content: space-evenly;
     box-sizing: border-box;
+    border-right: 1px solid black;
     width: 25%; 
     height: 100%;
     padding: 2%;
-    background-color: #DA9F93; 
+    // background-color: #F038FF; 
     position: absolute; 
     left: 0;
     z-index: 1; 
@@ -42,6 +43,11 @@
     align-self: flex-start;
     margin-top: auto;
     margin-bottom: 2%;
+    border: 1px solid black;
+  }
+
+  mat-divider {
+    margin: 0;
   }
 
   // Main content box stylings  
@@ -50,10 +56,10 @@
     margin-left: 25%;
     justify-content: center;
     padding: 2%;
+    // background-color: #91F5AD;
   }
   
   .component {
-    background-color: #EBD4CB;
     border: 1px solid #2C0703;
     border-radius: 5px;
   }
@@ -68,7 +74,7 @@
   .add-goal-component {
     height: 100%;
     width: 100%;
-    background-color: #f5f5f5;
+    // background-color: white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
     min-height: 500px;
@@ -118,7 +124,7 @@
   }
   
   .goals-tabs {
-    background-color: #f5f5f5; 
+    // background-color: #f5f5f5; 
     border-radius: 8px; 
     height: 100%;
     margin-right: 2%;
