--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,7 +59,9 @@
                 <br>
                 <span style="color: gray; font-size: 0.85em;">(Keeps completed goals)</span>
               </button>
-              <button mat-menu-item (click)="downloadLocalStorage()">Export Stats(as JSON)</button>
+              <mat-divider></mat-divider>
+              <button mat-menu-item (click)="downloadLocalStorage()">Export Data(as JSON)</button>
+              <button mat-menu-item (click)="openImportDataModal()">Import Data(as JSON)</button>
               <mat-divider></mat-divider>
               <button mat-menu-item style="color: red;" (click)="deleteAccount()">Reset Account</button>
             </mat-menu>
