Added color and styling to no results box and address cards

--- a/src/app/addressCard/addressCard.component.less
+++ b/src/app/addressCard/addressCard.component.less
@@ -3,15 +3,19 @@ mat-card {
     padding: 1%;
 }
 
+mat-card:hover{
+    border: 2px solid #f038ff;
+}
+
 .highlight {
     background-color: black; 
     color: #f038ff;
     border-radius: 5px;
     transition: all 0.4s ease-in-out; 
     border: 2px solid #f038ff;
-  }
+}
 
-  .highlight:hover {
+.highlight:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);  
     transition: all 0.5s ease-in-out;   
   }
