--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,7 +10,7 @@
 
   // Card that all content sits on
   .content {
-    width: 90%;
+    // width: 90%;
     position: relative;
     overflow: hidden;
   }
@@ -37,6 +37,7 @@
   .user-info-component {
     padding:2%;
     margin-bottom: 25%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
   
   .settings-button {
@@ -219,9 +220,11 @@
 
   .opening-form-card {
     display: flex;
+    max-height: 99vh;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 10%;
+    margin: 3%;
   }
 
   .opening-form-card {
@@ -240,16 +243,16 @@
     display: flex;
     flex-direction: column;
   }
-
+  
   .input-label {
     font-weight: bold;
     font-size: 1rem;
   }
-
+  
   input {
     padding: 10px;
     font-size: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid #818080;
     border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
@@ -290,8 +293,23 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
   }
 
+  .no-results-found {
+    color: #F038FF;
+    justify-content: center;
+    display: flex;
+    padding: 5%;
+  }
+
   a {
     color: #F038FF;
     cursor: pointer;
     text-decoration: underline;
+  }
+
+  .import-json-div {
+    margin-top: 5%;
+    font-size: small;
+    font-weight:100;
+    justify-content: center;
+    display: flex;
   }
