Added Seach Home Location GIF to ReadMe.md

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -10,7 +10,7 @@
 
   // Card that all content sits on
   .content {
-    // width: 90%;
+    width: 90%;
     position: relative;
     overflow: hidden;
   }
@@ -278,11 +278,6 @@
     color: white;
     cursor: not-allowed;
   }
-
-  .no-results-found {
-    color: red; 
-    font-size: 14px;
-  }
   
   .scroll-container {
     background-color: black;
@@ -297,7 +292,7 @@
     color: #F038FF;
     justify-content: center;
     display: flex;
-    padding: 5%;
+    padding: 5% 0%;
   }
 
   a {
@@ -308,8 +303,9 @@
 
   .import-json-div {
     margin-top: 5%;
-    font-size: small;
-    font-weight:100;
+    // font-size: medium;
+    // font-weight:100;
+    opacity: 80%;
     justify-content: center;
     display: flex;
   }
