Experimenting wih darker colors theme for inital form screen

--- a/src/app/addressCard/addressCard.component.less
+++ b/src/app/addressCard/addressCard.component.less
@@ -1,10 +1,13 @@
 mat-card {
     border-radius: 5px;
     padding: 1%;
+    border: 1px solid black;
+    color: black;
 }
 
 mat-card:hover{
     border: 2px solid #f038ff;
+    color:#f038ff;
 }
 
 .highlight {
