--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -195,7 +195,7 @@
             (keydown.enter)="generateLocationList()"
           />
           
-          <button class="location-button" (click)="generateLocationList()">Search</button>
+          <button class="location-search-button" (click)="generateLocationList()">Search</button>
         </div>
 
       </div>
