--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -47,10 +47,6 @@
     border: 1px solid black;
   }
 
-  // mat-divider {
-  //   margin: 0;
-  // }
-
   // Main content box stylings  
   .main-content {
     display:flex;
@@ -180,9 +176,9 @@
     flex-direction: column;
   }
 
-  .location-button {
-    background-color: black;
-    color: white;
+  .location-search-button {
+    background-color: #F038FF;
+    color: black;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -225,12 +221,15 @@
     align-items: center;
     padding: 10%;
     margin: 3%;
+    // border: 2px solid #F038FF;
   }
 
   .opening-form-card {
     max-width: 500px;
     margin: auto;
     padding: 2%;
+    background-color: black;
+    color: #F038FF;
   }
   
   .form-container {
@@ -259,8 +258,8 @@
   }
 
   .button-container {
-    background-color: black; /* Primary color */
-    color: #F038FF;
+    background-color: #F038FF; /* Primary color */
+    color: black;
     border: none;
     padding: 10px 15px;
     font-size: 1rem;
@@ -280,7 +279,7 @@
   }
   
   .scroll-container {
-    background-color: black;
+    background-color:  white;
     max-height: 400px;
     overflow-y: auto; 
     padding: 10px;
@@ -303,8 +302,6 @@
 
   .import-json-div {
     margin-top: 5%;
-    // font-size: medium;
-    // font-weight:100;
     opacity: 80%;
     justify-content: center;
     display: flex;
