Active goals component and Add a Goal component now remain the same height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -137,8 +137,8 @@
                 <mat-tab label="Add a Goal">
 
                   <div class="add-goal-container">
-                      <div>Next Goal Location</div>
                       <input
+                      class="add-goal-input"
                       placeholder="Search for an address"
                       [(ngModel)]=locationSearch
                       required
