--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -39,6 +39,32 @@
     margin-bottom: 25%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   }
+
+  // Log run input
+  .input-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 100%; 
+    max-width: 300px; 
+  }
+  
+  input[type="number"] {
+    width: 100%;
+    padding-right: 80px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+  }
+  
+  span.log-unit {
+    position: absolute;
+    right: 10px; 
+    top: 50%;
+    transform: translateY(-50%); 
+    color: gray; 
+    font-size: medium; 
+    pointer-events: none; 
+  }
   
   .settings-button {
     align-self: flex-start;
@@ -47,13 +73,13 @@
     border: 1px solid black;
   }
 
-  // Main content box stylings  
+  // Content box with Active Goals + Add a Goal stylings  
   .main-content {
     display:flex;
     margin-left: 25%;
     justify-content: center;
     padding: 2%;
-    // background-color: #91F5AD;
+    height: 500px;
   }
   
   .component {
@@ -63,16 +89,18 @@
 
   // Active/Completed goals component stylings
   .goals-tabs {
-    // background-color: #f5f5f5; 
+    background-color: #f5f5f5; 
     border-radius: 8px; 
-    height: 100%;
+    max-height: 100%;
     margin-right: 2%;
     overflow-y: auto; 
-    min-height: 500px;
-    max-height: 500px;
     width: 45%; 
     overflow: hidden; 
     transition: max-width 0.3s ease-in-out;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 2%;
+    display: flex;
+    flex-direction: column; 
   }
 
   .goal-div {
@@ -129,40 +157,16 @@
   .add-goal-component {
     height: 100%;
     width: 100%;
-    // background-color: white;
+    border-radius: 8px; 
     display: flex;
     flex-direction: column;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
-    min-height: 500px;
-    max-height: 500px;
     overflow: hidden;
   }
-  
-  // Log run input
-  .input-wrapper {
-    position: relative;
-    display: inline-block;
-    width: 100%; 
-    max-width: 300px; 
-  }
-  
-  input[type="number"] {
-    width: 100%;
-    padding-right: 80px; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
-  }
-  
-  span.log-unit {
-    position: absolute;
-    right: 10px; 
-    top: 50%;
-    transform: translateY(-50%); 
-    color: gray; 
-    font-size: medium; 
-    pointer-events: none; 
+
+  .add-goal-input {
+    margin: 2% 0%;
   }
   
   .hover:hover {
