--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -90,17 +90,15 @@
   // Active/Completed goals component stylings
   .goals-tabs {
     background-color: #f5f5f5; 
-    border-radius: 8px; 
     max-height: 100%;
+    width: 45%; 
+    border-radius: 8px; 
     margin-right: 2%;
     overflow-y: auto; 
-    width: 45%; 
     overflow: hidden; 
     transition: max-width 0.3s ease-in-out;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
-    display: flex;
-    flex-direction: column; 
   }
 
   .goal-div {
@@ -140,13 +138,15 @@
      color:white; 
      cursor: pointer;
    }
- 
-   .no-goals {
-     text-align: center;
-   }
+  
+  .no-goals {
+    font-size: 1.2em;
+    color: gray;
+    text-align: center;
+    margin-top: 40%;
+  }
 
   // Add Goal component stylings
-
   .right-content-align {
     display: flex; 
     flex-direction: column;
@@ -225,7 +225,6 @@
     align-items: center;
     padding: 10%;
     margin: 3%;
-    // border: 2px solid #F038FF;
   }
 
   .opening-form-card {
