--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -232,7 +232,7 @@
     margin: auto;
     padding: 2%;
     background-color: black;
-    color: #F038FF;
+    color: white;
   }
   
   .form-container {
@@ -262,7 +262,7 @@
 
   .button-container {
     background-color: #F038FF; /* Primary color */
-    color: black;
+    color: white;
     border: none;
     padding: 10px 15px;
     font-size: 1rem;
@@ -298,14 +298,15 @@
   }
 
   a {
-    color: #F038FF;
+    color: white;
     cursor: pointer;
     text-decoration: underline;
   }
 
   .import-json-div {
     margin-top: 5%;
-    opacity: 80%;
+    // opacity: 80%;
+    font-weight: 100;
     justify-content: center;
     display: flex;
   }
