--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -89,6 +89,8 @@
     height: 500px;
     background-color: black;
     color: white;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
   
   .component {
@@ -112,7 +114,8 @@
   }
 
   .goal-div {
-    background-color: green;
+    background-color: #F038FF;
+    // color: ;
     margin: 2%;
     border-radius: 25px;
    }
@@ -146,7 +149,7 @@
      text-align: center;
      font-size: large;
      font-weight: bold;
-     color:white; 
+    //  color:white; 
      cursor: pointer;
    }
   
