Began changing color scheme

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -21,24 +21,26 @@
     flex-direction: column;
     justify-content: space-evenly;
     box-sizing: border-box;
-    border-right: 2px solid #F038FF;
+    border: 2px solid black;
     width: 25%; 
     height: 100%;
     padding: 2%;
-    // background-color: #F038FF; 
+    background-color: #a31414;
     position: absolute; 
     left: 0;
     z-index: 1; 
     transition: width 0.3s ease;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    background-color: black;
+    // background-color: black;
   }
   
   .user-info-component {
     padding:2%;
     margin-bottom: 25%;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(145, 2, 2, 0.1);
+    border: 1px solid black;
+    background-color: white;
   }
 
   // Log run input
@@ -47,6 +49,7 @@
     display: inline-block;
     width: 100%; 
     max-width: 300px; 
+    border: 1px solid black;
   }
   
   input[type="number"] {
@@ -72,12 +75,12 @@
     margin-top: auto;
     margin-bottom: 2%;
     border: 2px solid white;
-    background-color: #F038FF;
+    background-color: #a31414;
     color: black;
   }
 
   mat-flat-button {
-    background-color: #F038FF;
+    background-color: white;
   }
 
   // Content box with Active Goals + Add a Goal stylings  
@@ -87,15 +90,16 @@
     justify-content: center;
     padding: 2%;
     height: 500px;
-    background-color: black;
+    // background-color: black;
+    border: 2px solid black;
     color: white;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
   }
   
   .component {
-    background-color: white;
-    border: 2px solid #F038FF;
+    // background-color: white;
+    // border: 2px solid #F038FF;
     border-radius: 5px;
   }
 
@@ -114,7 +118,7 @@
   }
 
   .goal-div {
-    background-color: #F038FF;
+    // background-color: #F038FF;
     // color: ;
     margin: 2%;
     border-radius: 25px;
@@ -185,7 +189,7 @@
   
   .hover:hover {
     cursor: pointer;
-    color: #F038FF;
+    // color: #F038FF;
     transition: all 0.2s ease-in-out;   
   }
 
@@ -195,7 +199,7 @@
   }
 
   .location-search-button {
-    background-color: #F038FF;
+    // background-color: #F038FF;
     color: black;
     border-radius: 5px;
     cursor: pointer;
@@ -204,14 +208,14 @@
   }
   
   .add-goal-search-button {
-    background-color: black;
+    // background-color: black;
     color: white ;
-    border: 1px solid #F038FF;
+    // border: 1px solid #F038FF;
     border-radius: 5px;
   }
 
   .location-list-div {
-    background-color: black;
+    // background-color: black;
     border-radius: 5px;
     overflow-y: auto;
     width: 100%;
@@ -227,7 +231,7 @@
   }
 
   app-address-card:hover {
-    color: black;
+    // color: black;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
     transform: translateY(-4px); 
   }
@@ -251,8 +255,8 @@
     max-width: 500px;
     margin: auto;
     padding: 2%;
-    background-color: black;
-    color: white;
+    // background-color: black;
+    // color: white;
   }
   
   .form-container {
@@ -281,8 +285,8 @@
   }
 
   .button-container {
-    background-color: #F038FF; /* Primary color */
-    color: white;
+    // background-color: #F038FF; /* Primary color */
+    // color: white;
     border: none;
     padding: 10px 15px;
     font-size: 1rem;
@@ -311,7 +315,7 @@
   }
 
   .no-results-found {
-    color: #F038FF;
+    // color: #F038FF;
     justify-content: center;
     display: flex;
     padding: 5% 0%;
