--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -25,7 +25,7 @@
     width: 25%; 
     height: 100%;
     padding: 2%;
-    background-color: #a31414;
+    background-color: white;
     position: absolute; 
     left: 0;
     z-index: 1; 
@@ -75,7 +75,7 @@
     margin-top: auto;
     margin-bottom: 2%;
     border: 2px solid white;
-    background-color: #a31414;
+    background-color: whitesmoke;
     color: black;
   }
 
@@ -98,8 +98,6 @@
   }
   
   .component {
-    // background-color: white;
-    // border: 2px solid #F038FF;
     border-radius: 5px;
   }
 
@@ -113,13 +111,12 @@
     overflow-y: auto; 
     overflow: hidden; 
     transition: max-width 0.3s ease-in-out;
+    border: 1px solid black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
   }
 
   .goal-div {
-    // background-color: #F038FF;
-    // color: ;
     margin: 2%;
     border-radius: 25px;
    }
@@ -153,7 +150,6 @@
      text-align: center;
      font-size: large;
      font-weight: bold;
-    //  color:white; 
      cursor: pointer;
    }
   
@@ -178,6 +174,7 @@
     border-radius: 8px; 
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 2%;
     overflow: hidden;
@@ -185,6 +182,7 @@
 
   .add-goal-input {
     margin: 2% 0%;
+    border: 1px solid black;
   }
   
   .hover:hover {
@@ -208,9 +206,6 @@
   }
   
   .add-goal-search-button {
-    // background-color: black;
-    color: white ;
-    // border: 1px solid #F038FF;
     border-radius: 5px;
   }
 
@@ -255,8 +250,6 @@
     max-width: 500px;
     margin: auto;
     padding: 2%;
-    // background-color: black;
-    // color: white;
   }
   
   .form-container {
