Updated readme images to match current app styling

--- a/src/app/addressCard/addressCard.component.less
+++ b/src/app/addressCard/addressCard.component.less
@@ -6,16 +6,15 @@ mat-card {
 }
 
 mat-card:hover{
-    border: 2px solid #f038ff;
-    color:#f038ff;
+    border: 2px solid black;
 }
 
 .highlight {
     background-color: black; 
-    color: #f038ff;
+    color: white;
     border-radius: 5px;
     transition: all 0.4s ease-in-out; 
-    border: 2px solid #f038ff;
+    border: 2px solid black;
 }
 
 .highlight:hover {
