--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -14,7 +14,7 @@
     position: relative;
     overflow: hidden;
   }
-  
+
   // Sidebar stylings
   .sidebar {
     display: flex;
@@ -22,19 +22,19 @@
     justify-content: space-evenly;
     box-sizing: border-box;
     border: 2px solid black;
-    width: 25%; 
+    width: 25%;
     height: 100%;
     padding: 2%;
     background-color: white;
-    position: absolute; 
+    position: absolute;
     left: 0;
-    z-index: 1; 
+    z-index: 1;
     transition: width 0.3s ease;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
     // background-color: black;
   }
-  
+
   .user-info-component {
     padding:2%;
     margin-bottom: 25%;
@@ -47,29 +47,29 @@
   .input-wrapper {
     position: relative;
     display: inline-block;
-    width: 100%; 
-    max-width: 300px; 
+    width: 100%;
+    max-width: 300px;
     border: 1px solid black;
   }
-  
+
   input[type="number"] {
     width: 100%;
-    padding-right: 80px; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
-    box-sizing: border-box; 
+    padding-right: 80px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
   }
-  
+
   span.log-unit {
     position: absolute;
-    right: 10px; 
+    right: 10px;
     top: 50%;
-    transform: translateY(-50%); 
-    color: gray; 
-    font-size: medium; 
-    pointer-events: none; 
+    transform: translateY(-50%);
+    color: gray;
+    font-size: medium;
+    pointer-events: none;
   }
-  
+
   .settings-button {
     align-self: flex-start;
     margin-top: auto;
@@ -83,7 +83,7 @@
     background-color: white;
   }
 
-  // Content box with Active Goals + Add a Goal stylings  
+  // Content box with Active Goals + Add a Goal stylings
   .main-content {
     display:flex;
     margin-left: 25%;
@@ -96,20 +96,20 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
   }
-  
+
   .component {
     border-radius: 5px;
   }
 
   // Active/Completed goals component stylings
   .goals-tabs {
-    background-color: #f5f5f5; 
+    background-color: #f5f5f5;
     max-height: 100%;
-    width: 45%; 
-    border-radius: 8px; 
+    width: 45%;
+    border-radius: 8px;
     margin-right: 2%;
-    overflow-y: auto; 
-    overflow: hidden; 
+    overflow-y: auto;
+    overflow: hidden;
     transition: max-width 0.3s ease-in-out;
     border: 1px solid black;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -118,41 +118,42 @@
 
   .goal-div {
     margin: 2%;
+    background-color: green;
     border-radius: 25px;
    }
-   
-   .goal-info { 
+
+   .goal-info {
      display: flex;
      color: black;
-     justify-content: space-between; 
-     align-items: center; 
+     justify-content: space-between;
+     align-items: center;
    }
-   
+
    mat-progress-bar {
      margin-top: 5px;
    }
- 
+
    .delete-button {
      color: #f44336;
      transition: transform 0.2s ease-in-out;
    }
- 
+
    .delete-button:hover {
      color: #d32f2f;
-     transform: scale(1.1); 
+     transform: scale(1.1);
    }
- 
+
    .delete-button:focus {
-     outline: none; 
+     outline: none;
    }
-   
+
    .completed {
      text-align: center;
      font-size: large;
      font-weight: bold;
      cursor: pointer;
    }
-  
+
   .no-goals {
     font-size: 1.2em;
     color: gray;
@@ -162,16 +163,16 @@
 
   // Add Goal component stylings
   .right-content-align {
-    display: flex; 
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 45%;
   }
-  
+
   .add-goal-component {
     height: 100%;
     width: 100%;
-    border-radius: 8px; 
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     border: 1px solid black;
@@ -184,11 +185,10 @@
     margin: 2% 0%;
     border: 1px solid black;
   }
-  
+
   .hover:hover {
     cursor: pointer;
-    // color: #F038FF;
-    transition: all 0.2s ease-in-out;   
+    transition: all 0.2s ease-in-out;
   }
 
   .add-goal-container {
@@ -197,14 +197,13 @@
   }
 
   .location-search-button {
-    // background-color: #F038FF;
     color: black;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin: 1% 0%;
   }
-  
+
   .add-goal-search-button {
     border-radius: 5px;
   }
@@ -227,8 +226,8 @@
 
   app-address-card:hover {
     // color: black;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); 
-    transform: translateY(-4px); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    transform: translateY(-4px);
   }
 
   .align-right {
@@ -251,7 +250,7 @@
     margin: auto;
     padding: 2%;
   }
-  
+
   .form-container {
     display: flex;
     flex-direction: column;
@@ -262,12 +261,12 @@
     display: flex;
     flex-direction: column;
   }
-  
+
   .input-label {
     font-weight: bold;
     font-size: 1rem;
   }
-  
+
   input {
     padding: 10px;
     font-size: 1rem;
@@ -297,14 +296,14 @@
     color: white;
     cursor: not-allowed;
   }
-  
+
   .scroll-container {
     background-color:  white;
     max-height: 400px;
-    overflow-y: auto; 
+    overflow-y: auto;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); 
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   }
 
   .no-results-found {
