Changed home button color to match updated color scheme

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -277,8 +277,8 @@
   }
 
   .button-container {
-    // background-color: #F038FF; /* Primary color */
-    // color: white;
+    background-color: black;
+    color: white;
     border: none;
     padding: 10px 15px;
     font-size: 1rem;
@@ -307,7 +307,6 @@
   }
 
   .no-results-found {
-    // color: #F038FF;
     justify-content: center;
     display: flex;
     padding: 5% 0%;
